--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>itextpdf</artifactId>
+      <version>5.5.13.2</version>
+    </dependency>
+
+    <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.28</version> <!-- Usa la versión adecuada -->
